--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,10 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-motion": "^1.0.1",
     "vite": "^6.0.5"
   }
 }
