--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.0"
   },
